--- a/css/styles.css
+++ b/css/styles.css
@@ -10883,31 +10883,7 @@ textarea.form-control-lg {
 } 
 
 
-.navbar .nav-link {
-  font-size: 1.05rem !important;
-  color: rgba(0, 15, 26, 0.8) !important;
-}
 
-.navbar .bi {
-  font-size: 1rem !important;
-} 
-
-
-/*********NAV/
-/* Azul oscuro personalizado */
-.text-custom-blue {
-  color: rgba(0, 15, 26, 0.8) !important;
-}
-
-/* Iconos más pequeños */
-.navbar .bi {
-  font-size: 2rem !important;
-}
-
-/* Centrado y ajuste de navbar */
-.navbar-nav {
-  gap: 1rem;
-} 
 
 
 
@@ -10945,3 +10921,134 @@ textarea.form-control-lg {
 
 
 
+
+
+
+/* HEADER con imagen de fondo y transición DE SERVICIOS */
+.fade-in-header {
+  background-image: url('../assets/img/checklist-home-cleaning.jpg');
+  /* Cambia la ruta a tu imagen */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  /* Altura más reducida */
+  position: relative;
+  opacity: 0;
+  animation: fadeInBg  0.9s ease-in-out forwards;
+}
+
+/* Fondo oscuro semitransparente (overlay) */
+.fade-in-header .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  /* Oscurece la imagen */
+  z-index: 0;
+}
+
+/* Contenido centrado y por encima del overlay */
+.header-content {
+  position: relative;
+  z-index: 1;
+}
+
+/* Animación */
+@keyframes fadeInBg {
+  to {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+
+
+/* HEADER con imagen de fondo y transición DEL NAV DE NOSOTROS */
+#header-mvv {
+  background-image: url('../assets/img/el-mundo-del-mantenimiento-1024x536.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 300px;
+  /* Altura más reducida */
+  position: relative;
+  opacity: 0;
+  animation: fadeInBg 0.9s ease-in-out forwards;
+}
+
+/* Fondo oscuro semitransparente (overlay) */
+#header-mvv .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 0;
+}
+
+/* Contenido centrado y por encima del overlay */
+#header-mvv .header-content {
+  position: relative;
+  z-index: 1;
+}
+
+/* Animación de entrada */
+@keyframes fadeInBg {
+  to {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*NAV*/
+.nav-custom {
+  font-size: 16px;
+  font-weight: 500;
+  color: black;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.nav-custom i {
+  font-size: 1.5rem;
+    /* Tamaño del ícono ligeramente aumentado */
+  color: black;
+  transition: transform 0.3s ease;
+}
+
+.nav-custom:hover {
+  color: #08497a !important;
+}
+
+.nav-custom:hover::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #0a4275;
+  bottom: -5px;
+  left: 0;
+  transition: width 0.3s ease;
+}
+
+.nav-custom:hover i {
+  transform: scale(1.15);
+}
